// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Swatch component will pass props correctly snapshot testing 1`] = `
<li
  className="color-info__similar-color"
  style={
    Object {
      "backgroundColor": "#edd5dd",
    }
  }
>
  <Link
    className="color-info__similar-color-info"
    onClick={[Function]}
    replace={false}
    style={
      Object {
        "backgroundColor": "#edd5dd",
      }
    }
    to="/active/color-detail/2255/sw-6568-lighthearted-pink"
  >
    <div
      className="color-info__similar-color-info-wrapper"
    >
      <span
        className="color-info__similar-color-brand-key"
      >
        SW
      </span>
       
      <span
        className="color-info__similar-color-number"
      >
        6568
      </span>
      <p
        className="color-info__similar-color-name"
      >
        Lighthearted Pink
      </p>
    </div>
  </Link>
</li>
`;

exports[`Color Swatch component with props as empty array snapshot testing 1`] = `
<li
  className="color-info__similar-color"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <Link
    className="color-info__similar-color-info"
    onClick={[Function]}
    replace={false}
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
    to="/active/color-detail/-"
  >
    <div
      className="color-info__similar-color-info-wrapper"
    >
      <span
        className="color-info__similar-color-brand-key"
      />
       
      <span
        className="color-info__similar-color-number"
      />
      <p
        className="color-info__similar-color-name"
      />
    </div>
  </Link>
</li>
`;
